--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"react-redux": "^7.2.1",
 		"react-redux-firebase": "^3.7.0",
 		"react-router-dom": "^5.2.0",
-		"react-scripts": "3.4.1",
+		"react-scripts": "^3.4.3",
+		"react-spinkit": "^3.0.0",
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-firestore": "^0.13.0",
