--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "mate-app",
 	"version": "0.1.0",
 	"private": true,
+	"proxy": "https://www.berkeleytime.com",
 	"dependencies": {
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
