--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"jquery": "^3.5.1",
 		"popper.js": "^1.16.1",
 		"react": "^16.13.1",
+		"react-datepicker": "^3.1.3",
 		"react-dom": "^16.13.1",
 		"react-redux": "^7.2.1",
 		"react-redux-firebase": "^3.7.0",
