--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"bootstrap": "^4.5.2",
 		"firebase": "^7.19.0",
 		"jquery": "^3.5.1",
+		"moment": "^2.27.0",
 		"popper.js": "^1.16.1",
 		"react": "^16.13.1",
 		"react-datepicker": "^3.1.3",
