--- a/package.json
+++ b/package.json
@@ -4,14 +4,19 @@
 	"private": true,
 	"proxy": "https://www.berkeleytime.com",
 	"dependencies": {
+		"@date-io/date-fns": "^1.3.13",
+		"@date-io/moment": "^1.3.13",
 		"@material-ui/core": "^4.11.0",
 		"@material-ui/icons": "^4.9.1",
+		"@material-ui/pickers": "^3.2.10",
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
 		"axios": "^0.19.2",
 		"bootstrap": "^4.5.2",
+		"date-fns": "^2.16.1",
 		"firebase": "^7.19.0",
+		"immer": "^7.0.9",
 		"jquery": "^3.5.1",
 		"moment": "^2.27.0",
 		"popper.js": "^1.16.1",
