--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
 		"axios": "^0.19.2",
 		"bootstrap": "^4.5.2",
 		"date-fns": "^2.16.1",
-		"firebase": "^7.19.0",
+		"firebase": "^7.24.0",
 		"immer": "^7.0.9",
 		"jquery": "^3.5.1",
 		"moment": "^2.27.0",
+		"package-lock.json": "^1.0.0",
+		"package.json": "^2.0.1",
 		"popper.js": "^1.16.1",
 		"react": "^16.13.1",
 		"react-datepicker": "^3.1.3",
