--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"react": "^16.13.1",
 		"react-datepicker": "^3.1.3",
 		"react-dom": "^16.13.1",
+		"react-places-autocomplete": "^7.3.0",
 		"react-redux": "^7.2.1",
 		"react-redux-firebase": "^3.7.0",
 		"react-router-dom": "^5.2.0",
