--- a/package.json
+++ b/package.json
@@ -13,6 +13,10 @@
 		"@testing-library/jest-dom": "^4.2.4",
 		"@testing-library/react": "^9.5.0",
 		"@testing-library/user-event": "^7.2.1",
+		"@types/jest": "^26.0.19",
+		"@types/node": "^14.0.27",
+		"@types/react": "^16.9.45",
+		"@types/react-dom": "^16.9.8",
 		"axios": "^0.19.2",
 		"bootstrap": "^4.5.2",
 		"date-fns": "^2.16.1",
@@ -36,7 +40,8 @@
 		"redux": "^4.0.5",
 		"redux-devtools-extension": "^2.13.8",
 		"redux-firestore": "^0.13.0",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"typescript": "^4.1.3"
 	},
 	"scripts": {
 		"start": "react-scripts start",
