--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-places-autocomplete": "^7.2.6",
 		"@types/react-redux": "^7.1.15",
 		"@types/react-router-dom": "^5.1.7"
 	}
