--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-datepicker": "^3.1.3",
 		"react-device-detect": "^1.14.0",
 		"react-dom": "^16.13.1",
+		"react-lazy-load-image-component": "^1.5.1",
 		"react-places-autocomplete": "^7.3.0",
 		"react-redux": "^7.2.1",
 		"react-redux-firebase": "^3.7.0",
