--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
 		]
 	},
 	"devDependencies": {
+		"@types/react-lazy-load-image-component": "^1.5.1",
 		"@types/react-places-autocomplete": "^7.2.6",
 		"@types/react-redux": "^7.1.15",
 		"@types/react-router-dom": "^5.1.7"
